--- a/Trueques/Trueques/Web.config
+++ b/Trueques/Trueques/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="TruequesConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=Trueques;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
