--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Trueques/.vs/Trueques/v15/.suo
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-shm
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-wal
+Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-shm
+Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-wal
