--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-shm
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-wal
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-wal
 Trueques/.vs/Trueques/v15/.suo
+*.ide-wal
