--- a/Trueques/Trueques/Web.config
+++ b/Trueques/Trueques/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,6 +6,8 @@
 <configuration>
   <connectionStrings>
     <add name="TruequesConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=Trueques;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="TRKConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=TRK;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
