--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-
+Trueques/cache/
+Trueques/log/
+Trueques/.vs
 Trueques/.vs/Trueques/v15/.suo
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-shm
