Actualizacion de ignorados

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Trueques/cache/
 Trueques/log/
-Trueques/.vs
+Trueques/.vs/
+Trueques/bin/
 Trueques/.vs/Trueques/v15/.suo
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide
 Trueques/.vs/Trueques/v15/Server/sqlite3/storage.ide-shm
