--- a/Trueques/Trueques/Web.config
+++ b/Trueques/Trueques/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="TruequesConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=Trueques;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="TruequesConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=Trueques;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
     <add name="TRKConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=TRK;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
