--- a/Trueques/Trueques/bin/Trueques.dll.config
+++ b/Trueques/Trueques/bin/Trueques.dll.config
@@ -11,9 +11,9 @@
   <connectionStrings>
     <!--<add name="TruequesConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=Trueques;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="TRKConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=TRK;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TRKEntities" connectionString="metadata=res://*/Entities.TKR.csdl|res://*/Entities.TKR.ssdl|res://*/Entities.TKR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SF-0011;initial catalog=TRK;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="TRKConnectionString" connectionString="Data Source=SF-0011;Initial Catalog=TRK;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TRKEntities" connectionString="metadata=res://*/Entities.TKR.csdl|res://*/Entities.TKR.ssdl|res://*/Entities.TKR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SF-0011;initial catalog=TRK;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="TRKEntities" connectionString="metadata=res://*/Entities.TRK.csdl|res://*/Entities.TRK.ssdl|res://*/Entities.TRK.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SF-0011;initial catalog=TRK;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
